--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "homepage": "https://pingwin02.github.io/literalnie-solver/",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.19.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -37,6 +37,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.1.0"
   }
 }
