feat: add language support and translations
- Introduced LanguageContext to manage language state across the application.
- Implemented translations for Polish and English in a new translations.js file.
- Updated HomePage and PasswordForm components to utilize translations for UI text.
- Refactored PasswordForm to fetch the appropriate dictionary based on the selected language.
- Enhanced user experience by allowing language toggling and updating UI elements accordingly.
- Cleaned up code by moving password finding logic to a separate utility function.

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "homepage": "https://pingwin02.github.io/literalnie-solver/",
   "private": true,
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "6.19.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-router-dom": "7.10.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "lint": "prettier --write .",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,7 +37,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "gh-pages": "^6.1.0"
+    "gh-pages": "^6.3.0",
+    "prettier": "^3.7.4"
   }
 }
